--- a/client/style.css
+++ b/client/style.css
@@ -1,17 +1,17 @@
 
-/* body {
+body {
 	height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-} */
+}
 
-div {
+/* div {
 	position: absolute;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-}
+} */
 
 
 
