--- a/client/style.css
+++ b/client/style.css
@@ -1,10 +1,10 @@
 
-body {
+/* body {
 	height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-}
+} */
 
 /* div {
 	position: absolute;
@@ -41,6 +41,41 @@ body {
 }
 
 
+.ground{
+  width: 400px;
+  height: 300px;
+  border: 5px solid black;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+
+
+#ball{
+  transition: transform 0.2s;
+}
+
+
+section {
+  background-color: orange;
+  padding: 2rem;
+}
+
+article {
+  background-color: dodgerblue;
+  padding: 2rem;
+}
+
+p {
+  background-color: hotpink;
+  padding: 2rem;
+}
+
+.container {
+  padding: 1rem;
+  border: 1px solid black;
+}
 
 
 
